Aggiunti i sorgenti della versione 2.22.0